objects/ProgramCategoryPeriod__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <description>The area linked to this program category</description>
        <inlineHelpText>The area linked to this program category</inlineHelpText>
        <label>Area</label>
        <referenceTo>Area__c</referenceTo>
        <relationshipName>ProgramCategoryAreas</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>The date this program category and area combination ended</description>
        <inlineHelpText>The date this program category and area combination ended</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FullNameFormula__c</fullName>
        <formula>Trim(Left(ProgramCategory__r.Name, 34)) &amp; &apos;_&apos; &amp; Trim(Left(Area__r.Name, 33)) &amp; &apos;_&apos; &amp;TEXT(MONTH(StartDate__c)) + &quot;/&quot; + RIGHT(TEXT(YEAR(StartDate__c)),2)&amp; &apos;_&apos; &amp;TEXT(MONTH(EndDate__c)) + &quot;/&quot; + RIGHT(TEXT(YEAR(EndDate__c)),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IE2TeaID__c</fullName>
        <label>IE2TeaID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProgramCategoryPeriodEID__c</fullName>
        <description>The Enterprise ID for this Program Category Period.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Program Category Period.</inlineHelpText>
        <label>Program Category Period EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProgramCategory__c</fullName>
        <description>The program category linked to this area</description>
        <inlineHelpText>The program category linked to this area</inlineHelpText>
        <label>Program Category</label>
        <referenceTo>ProgramCategory__c</referenceTo>
        <relationshipName>ProgramCategoryAreas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>The date this program category and area combination began</description>
        <inlineHelpText>The date this program category and area combination began</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Program Category Period</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ProgramCategory__c</columns>
        <columns>Area__c</columns>
        <columns>EndDate__c</columns>
        <columns>StartDate__c</columns>
        <columns>IE2TeaID__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Program Category Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Category Periods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>